Bug Fix buy_offer_of_the_day adopt resources_settings to Ogame V11 adopt build to Ogame V11 update requirements.txt add captcha solver add blackbox token

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-requests==2.27.1
-beautifulsoup4==4.11.1
 html5lib==1.1
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+Cython==3.0.2
+idna==3.4
+ImageHash==4.3.1
+numpy==1.26.0
+opencv-python==4.8.1.78
+packaging==23.1
+Pillow==10.0.1
+pytesseract==0.3.10
+PyWavelets==1.4.1
+requests==2.31.0
+scipy==1.11.3
+six==1.16.0
+soupsieve==2.5
+urllib3==2.0.5
+webencodings==0.5.1
